style.css
body {
	background-color: #ffffff;
	color: #333333;
	font-family: "Montserrat", sans-serif, "Roboto Mono";
}

a {
	color: #1a8cff;
	text-decoration: none;
}

a:hover {
	color: #0059b3;
	text-decoration: underline;
}

p {
	line-height: 20px;
}

@media (min-width: 1200px) {
	.container {
		width: 750px;
		margin: 0 auto;
		padding-left: 15px;
		padding-right: 15px;
		box-sizing: border-box;
	}
}
.container {
	margin-left: auto;
	margin-right: auto;
	padding-left: 15px;
	padding-right: 15px;
}



.name {
	font-size: 30px;
	font-weight: 500;
	margin-top: 10px;
	margin-bottom: 10px;
}

.info {
	font-size: 18px;
	font-weight: 400px;
}
.info #Email {
	font-family: "Roboto Mono", sans-serif, "Montserrat";
}

.links {
	line-height: 5px;
}

.About h5 {
	padding-bottom: 0px;
	margin-bottom: 0px;
}

h3 {
	font-family: "Roboto Mono", sans-serif, "Montserrat";
	font-size: 20px;
}

.Education p {
	display: inline;
}

.Education em {
	margin-left: 2rem;
	font-family: "Roboto Mono", sans-serif, "Montserrat";
}

